# birdclef26

./: pyproject.toml
configs/: 0_919_repeated_full.py  0_920_best_full.py  0_920_best_full_hgnetv2_b3_ssld_stage2_ft_in1k.py  0_920_best_full_pseudos_avg_top13_ensemble_thr0.5_low0.1.py  0_920_best_full_pseudos_ensemble_thr0.5_low0.1.py  0_920_best_full_tf_efficientnet_b3_ns_jft_in1k_higher_lr.py  0_920_best_full_tf_efficientnetv2_s_in21k_ft_in1k.py  bc_pretrain_perch_distill_5s.py  bc_pretrain_perch_distill_5s_hgnetv2_b3_ssld_stage2_ft_in1k.py  bc_pretrain_perch_distill_5s_tf_efficientnet_b3_ns_jft_in1k.py  bc_pretrain_perch_distill_5s_tf_efficientnetv2_s_in21k_ft_in1k.py
parse/inaturalist/: download_inat_new.py  parse_inat.py  redownload_corrupted.py
parse/tierstimmenarchiv/: download_tsa_new.py  parse_tsa.py
parse/xeno_canto/: download_new_xc.py  parse_xc.py
scripts/: create_old_manifest.py  create_soup.py  find_voice_segments.py  metric_report.py  pretrain.py  prune_bad_audio_csv.py  pseudolabel.py  train.py  validate_extra_sources_audio.py
src/: arcface.py  audio_validate.py  awp.py  blocks.py  create_folds.py  dataset.py  extra_source_audio_validate.py  extra_source_tag.py  extra_sources.py  lightning.py  losses.py  melspec.py  metric.py  models.py  offline_augmentations.py  online_augmentations.py  optim.py  perch.py  perch_distill_loss.py  pretrain_model.py  proto_pnet_head.py  rdrop.py  samplers.py  sed_infer_runtime.py  seed.py  ss_soundscape_bank.py  taxonomy_merge.py  traceable_melspec.py  utils.py  vad.py  wave_aug.py
