[project]
name = "birdclef2026"
version = "0.1.0"
description = "BirdCLEF+ 2026"
requires-python = ">=3.11,<3.13"
dependencies = [
    "click>=8.1.0,<9.0.0",
    "numpy>=1.26.4,<3",
    "pandas>=2.0.0,<3.0.0",
    "scipy>=1.10.0,<2.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "soundfile>=0.12.1,<1.0.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "nnaudio>=0.3.3,<0.4.0",
    "tqdm>=4.66.0,<5.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "timm>=1.0.0,<2.0.0",
    "transformers>=4.40.0,<5.0.0",
    "lightning>=2.4.0,<3.0.0",
    "tensorboard>=2.14.0,<3.0.0",
    "entmax>=1.3",
    "onnxruntime-gpu>=1.20.0,<2.0.0",
    "opencv-python-headless>=4.9.0,<5.0.0",
    "librosa>=0.11.0",
]

[project.optional-dependencies]
jupyter = [
    "jupyterlab>=4.0.0,<5.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "ipython>=8.20.0,<9.0.0",
]

[tool.uv]
package = false
dev-dependencies = [
    "ruff>=0.13.0,<0.14.0",
]